混合开发优化
混合开发优化

--- a/PYKit/Base.lproj/Main.storyboard
+++ b/PYKit/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l8E-ra-icP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l8E-ra-icP">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -267,6 +266,7 @@
                         <segue destination="L5G-2I-8YR" kind="push" identifier="slider" id="RTh-eY-1nK"/>
                         <segue destination="fCr-NO-2dZ" kind="push" identifier="check" id="ppD-fm-0Jd"/>
                         <segue destination="1Cl-xf-1OB" kind="push" identifier="map" id="xfS-gE-sXl"/>
+                        <segue destination="iEQ-xE-0wC" kind="push" identifier="webview" id="iEy-eb-RLZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -526,6 +526,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EEl-JL-386" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="966" y="759"/>
+        </scene>
+        <!--webview-->
+        <scene sceneID="ix7-ra-MFv">
+            <objects>
+                <viewController id="iEQ-xE-0wC" customClass="PYTestWebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Zvd-65-xBP"/>
+                        <viewControllerLayoutGuide type="bottom" id="1FO-4r-htd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DX1-Je-AXc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="webview" id="gLj-ys-dDD"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uyU-4F-Ysn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1761" y="773"/>
         </scene>
     </scenes>
 </document>
