--- a/PYKit/Source Code/Private/FilePicker/PYImagePickerCell.xib
+++ b/PYKit/Source Code/Private/FilePicker/PYImagePickerCell.xib
@@ -25,9 +25,9 @@
                         <rect key="frame" x="111" y="107" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="GzS-Ig-GK3"/>
-                            <constraint firstAttribute="width" constant="22" id="QYF-ae-UsF"/>
+                            <constraint firstAttribute="width" constant="22" id="qso-cp-1VK"/>
                         </constraints>
-                        <state key="normal" image="PYKit.bundle/images/checkbox-unselected-normal.png"/>
+                        <state key="normal" image="images/checkbox-unselected-normal.png"/>
                     </button>
                 </subviews>
             </view>
@@ -50,6 +50,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="PYKit.bundle/images/checkbox-unselected-normal.png" width="16" height="16"/>
+        <image name="images/checkbox-unselected-normal.png" width="16" height="16"/>
     </resources>
 </document>
